tests/NormalTests/paczka1/small_fuzzy/58207147.err
Error in line 1: Ju6oaejpdYP A754 95,6
Error in line 10: Ju6oaejpdYP A702 34,3
Error in line 16: 7Zyjo9luXt Am23 39,3
